--- a/SwiftyLayoutsExample/SwiftyLayoutsExample/Base.lproj/Main.storyboard
+++ b/SwiftyLayoutsExample/SwiftyLayoutsExample/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="350" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
-                                        <color key="backgroundColor" red="0.75986475490000005" green="0.56210087819999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.95686274509803915" green="0.6588235294117647" blue="0.54509803921568623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
